2000-08-12  Christopher James Lahey  <clahey@helixcode.com>

	* backend/ebook/.cvsignore: Added load-gnomecard-addressbook.

2000-08-12  Christopher James Lahey  <clahey@helixcode.com>

	* gui/search/e-addressbook-search-dialog.c,
	gui/search/e-addressbook-search-dialog.h: Made this into a Gtk
	object.

2000-08-12  Christopher James Lahey  <clahey@helixcode.com>

	* backend/pas/pas-book-view.c: Ref our book view listener.

	* gui/component/addressbook.c: Updated to use new minicard view
	widget.

	* gui/minicard/Makefile.am: Added e-minicard-view-widget.c and
	e-minicard-view-widget.h.

	* gui/minicard/e-minicard-view-widget.c,
	gui/minicard/e-minicard-view-widget.h: New class that's just a
	minicard view in an ECanvas.

	* gui/search/e-addressbook-search-dialog.c: New file for
	implementing a search dialog.

2000-08-11  Chris Toshok  <toshok@helixcode.com>

	* conduit/address-conduit.c (transmit): implement code to encode
	the first email address and send to the pilot.
	(get_phone_label_by_flag): rename find_phone_label_for_flags to
	this, and implement by calling get_phone_label_by_name.

2000-08-11  Chris Toshok  <toshok@helixcode.com>

	* conduit/address-conduit.c (ecard_from_remote_record): add code
	for handling email addresses from pilot (which stores it as a
	phone number entry.  go figure.)
	(check_for_slow_setting): #if 0 out, since we don't use it (yet).
	(update_record): un #if 0 the code to handle the case where the
	pilot info has changed for a local record.
	(merge_ecard_with_remote_record): implement function, but for now
	just return the existing (desktop) record - we still don't allow
	merge from the pilot.


2000-08-10  Christopher James Lahey  <clahey@helixcode.com>

	* gui/search/addresstypes.xml: Changed a couple of input field
	names.

2000-08-10  Ettore Perazzoli  <ettore@helixcode.com>

	* gui/component/addressbook-component.c: Remove prototype for
	`setup_ldap_storage()', which shouldn't be here anyway.
